// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text TextSm matches snapshot 1`] = `
.emotion-0 {
  font-size: 16px;
  color: var(--color-secondary);
  margin: 0;
}

<p
  className="emotion-0"
/>
`;

exports[`Text TextSm matches snapshot 2`] = `
.emotion-0 {
  font-size: 12px;
  color: var(--color-secondary);
}

<small
  className="emotion-0"
/>
`;
